Tue Nov 19 23:38:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-os-version-style): option to transform target
	  OS version string.

Tue Nov 19 21:27:33 2013  Tanaka Akira  <akr@fsij.org>

	* test/net/http/utils.rb (spawn_server): Specify zero for port to
	  avoid reusing an allocated port.

	* test/net/http/test_http.rb: Don't specify port here.

	* test/net/http/test_https.rb: Ditto.

Tue Nov 19 18:52:10 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_is_swept_object): use heap_page::before_sweep flag.

Tue Nov 19 18:49:32 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_reachable_objects_from_root): do major marking.

Tue Nov 19 18:45:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_resurrect): added.
	  rb_fstring() used rb_gc_mark() to avoid freeing used string.
	  However, rb_gc_mark() set mark bit *and* pushes mark_stack.
	  rb_gc_resurrect() does only set mark bit if it is before sweeping.

	* string.c (rb_fstring): use rb_gc_resurrect.

	* internal.h: add decl.

Tue Nov 19 09:47:02 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc master a1195ce.  Changes include:

	  Improved accessibility of the main sidebar navigation.

	  Fixed handling of regexp options in HTML source highlighting.

	* test/rdoc:  ditto.

Tue Nov 19 09:33:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 6a3d9f9.  Changes include:

	  Compatibly renamed Gem::DependencyResolver to Gem::Resolver.

	  Added support for git gems in gem.deps.rb and Gemfile.

	  Fixed resolver bugs.

	* test/rubygems: ditto.

	* lib/rubygems/LICENSE.txt:  Updated to license from RubyGems trunk.
	  [ruby-trunk - Bug #9086]

	* lib/rubygems/commands/which_command.rb:  RubyGems now indicates
	  failure when any file is missing.  [ruby-trunk - Bug #9004]

	* lib/rubygems/ext/builder:  Extensions are now installed into the
	  extension install directory and the first directory in the require