@@ -1,3 +1,8 @@
+Wed Nov 20 01:27:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (Delegator#send): separate from method_missing so
+	  that super calls proper method.
+
 Tue Nov 19 23:38:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in (--with-os-version-style): option to transform target
